# StockMarket

./: CMakeLists.txt  README.md
Backend/: APIDocumentation.md  Makefile  Server.cpp  Service.cpp  StockMarket.cpp  StocksService.cpp  TestCraft.cpp  example.json  prog  stocks.json  test.txt
Backend/Logger/: ConsoleLogger.h  FileLogger.h  Logger.h
Backend/controllers/: AuthController.cpp  AuthController.h  BaseController.h  StockController.cpp  StockController.h  StockMarketController.cpp  StockMarketController.h  TransactionController.cpp  TransactionController.h  UserController.cpp  UserController.h
Backend/dal/Database/: StockMarket.db
Backend/dal/DatabaseHandler/: DatabaseHandler.cpp  DatabaseHandler.h  QueryResponse.h  Response.h
Backend/dal/dtos/: StockCartDTO.h  StockDTO.h  TransactionDTO.h  UserDTO.h
Backend/services/: StockMarket  StockMarket.db
Design System/: Stock Market.drawio
Frontend/: main.js  package-lock.json  package.json
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/(pages)/login/: page.tsx
Frontend/app/(pages)/market/: page.tsx
Frontend/app/(pages)/profile/: page.tsx
Frontend/app/(pages)/signup/: page.tsx
Frontend/app/components/: index.tsx
Frontend/app/components/Footer/: Footer.tsx
Frontend/app/components/GBtn/: GBtn.tsx
Frontend/app/components/Navbar/: Navbar.tsx
Frontend/app/scss/: home.css  home.css.map  home.scss
Frontend/app/shared/styles/: _colors.scss  _mixins.scss
Frontend/app/shared/types/: index.ts
Frontend/app/utils/: clear-cookies.js  cookie.js
(+28 files in other folders)
